--- a/NewPageGrover/style.css
+++ b/NewPageGrover/style.css
@@ -558,10 +558,10 @@ mark {
     display: block;
 }
 
-.curved {
+/* .curved {
     background-image: url("https://www.groverservices.com/wp-content/uploads/2021/01/fondo.jpg");
 }
-
+ */
 
 /* sección nunca fue tan fácil vender */
 
