--- a/NewPageGrover/css/style.css
+++ b/NewPageGrover/css/style.css
@@ -647,9 +647,8 @@ mark {
 }
 
 .image-v {
-    width: 400px;
+    width: 320px;
     float: right;
-    padding-right: 3rem;
 }
 
 /* footer */
@@ -711,8 +710,6 @@ footer p {
 
 .footer-right > *{
     flex: 1 50%;
-    margin-right: 1em;
-    margin-left: 1em;
 }
 
 .box a {
@@ -950,6 +947,9 @@ footer p {
 }
 
 @media screen and (max-width: 1300px){
+    footer {
+        padding: 15px;
+    }
 
     .template-columns {
         padding-left: 0rem;
@@ -1055,6 +1055,16 @@ footer p {
         text-align: center;
     }
 
+    /* header */
+
+    .navegación {
+        padding-right: 8%;
+    }
+
+    .logo {
+        padding-left: 8%;
+    }
+
     /* Grover app responsive*/
 
     .template-columns-groverApp {
@@ -1081,7 +1091,6 @@ footer p {
 
     .template-columns-groverApp h3 {
         padding-bottom: 0rem;
-        font-size: 3.5rem;
     }
 
     #title-ga {
@@ -1100,11 +1109,6 @@ footer p {
         padding-bottom: 3rem;
     }
     
-    .template-columns-groverApp img {
-        width: 300px;
-        margin: 0 auto;
-        display: block;
-    }
 
     /* Nunca fue tan fácil vender responsive */
 
@@ -1172,17 +1176,16 @@ footer p {
 @media screen and (max-width: 900px){
 
     /* logo responsive */
-
+    
     .logo {
         display: block;
-        width: 50%;
         z-index: 9999;
         padding-left: 9%;
     }
 
     .menu-icon {
         display: flex;
-        margin-right: 10%;
+        margin-right: 5%;
         cursor: pointer;
         z-index: 9999;
     }
@@ -1218,7 +1221,7 @@ footer p {
         display: flex;
         cursor: pointer;
         position: absolute;
-        right: 10%;
+        right: 5%;
         top: 25px;
         z-index: 11111;
     }
@@ -1300,7 +1303,11 @@ footer p {
 @media screen and (max-width: 600px) {
 
     h3 {
-        font-size: 3rem;
+        font-size: 2.5rem;
+    }
+
+    .logo {
+        width: 200px;
     }
 
     /* grover pack  */
@@ -1356,7 +1363,6 @@ footer p {
 
     .template-columns-groverApp h3 {
         padding-bottom: 0rem;
-        font-size: 3rem;
     }
 
     /* por qué gorver celular */
