--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,7 +54,7 @@ p {
 
 section {
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
 }
 
 b {
@@ -114,22 +114,52 @@ button {
 
 /*header y portada*/
 
-.video { 
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    background-repeat: no-repeat;
-    padding: 0px;
-    margin: 0px;
+.circlePhone {
+    width: 23rem;
+    height: 23rem;
+    border-radius: 50%;
+    background: #F2D64B;
+    position: absolute;
+    top: 10%;
+    z-index: 2;
+    left: 5%;
 }
 
 .fondo {
-    background-image: linear-gradient(0deg, #000000 0%, #000000cc 100%);
-    height: 100vh;
+    background: rgba(40, 40, 70, 0.5);
+    background-image: url('/public/img/mount.jpg');
+    height: 80vh;
     width: 100vw;
-    top: 0;
-    left: 0;
+    display: flex;
+}
+
+.phone {
+    flex: 1;
+    margin: 0 auto;
+    position: relative;
+    top: 20%;
+    flex: 1;
+}
+
+.phone img {
+    width: 200px;
     position: absolute;
+    z-index: 3;
+    left: 13.5%;
+    animation: phone 6s ease-in-out infinite;
+    transform: translateY(0px);
+}
+
+@keyframes phone{
+    0% {
+        transform: translate(0px)
+    }
+    50% {
+        transform: translateY(-50px)
+    }
+    100% {
+        transform: translateY(0px)
+    }
 }
 
 /* header */
@@ -147,7 +177,7 @@ header {
 }
 
 .title{
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 .header a {
@@ -212,11 +242,12 @@ header {
 /*texto de la portada*/
 
 .contenedor {
-    width: 65%;
+   
     margin: 0 auto;
-   text-align: center;
+    text-align: end;
     position: relative;
     top: 32%;
+    flex: 1;
 }
 
 .title {
@@ -226,7 +257,7 @@ header {
 
 .title2 {
     color: white;
-    margin-bottom: 50px;
+    margin-bottom: 2rem;
 }
 
 .title3 {
@@ -1185,6 +1216,15 @@ footer p {
     .image-v {
         width: 320px;
 
+    }
+
+    .phone {
+        display: none;
+    }
+
+    .contenedor {
+        flex: none;
+        text-align: center;
     }
 
 }
