hot-fix style.css
Siempre los links tienen por root la carpeta public. Es decir, si me refiero a '/<loquesea>', la / se refiere a la carpeta public directamente
'/public/img' -> No
'/img' -> Ok

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,7 +127,7 @@ button {
 
 .fondo {
     background: rgba(40, 40, 70, 0.5);
-    background-image: url('/public/img/mount.jpg');
+    background-image: url('/img/mount.jpg');
     height: 80vh;
     width: 100vw;
     display: flex;
